--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     background-color: var(--card-color);
     background-image: url(images/bg-pattern-desktop.svg);
     background-repeat: no-repeat;
-    background-position: 950% 65%;
+    background-position: 875% 65%;
     height: 500px;
     width: 900px;
     display: grid;
@@ -43,6 +43,46 @@ body {
     border-radius: 23px;
 }
 
-.question-answer > .answer{
+.answer{
     display: none;
 }
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    margin-top: 75px;
+}
+
+.title {
+    font-size: 2.5rem;
+    margin-top: 0px;
+}
+
+.question-title {
+    color: var(--very-dark-grayish-blue);
+    margin: 0.9rem 0rem;
+    font-weight: 400;
+}
+
+.questions {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.question-answer {
+    border-bottom: 1px solid var(--light-grayish-blue);
+    width: 310px;
+}
+
+.question {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.question img {
+    align-self: center;
+}
+
