--- a/style.css
+++ b/style.css
@@ -38,13 +38,21 @@ main {
     height: 500px;
     width: 900px;
     display: grid;
-    grid-template-columns: 1fr 1fr; /*390px*/
+    grid-template-columns: 1fr 1fr; 
     grid-gap: 3rem;
     border-radius: 23px;
 }
 
 .answer{
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 1.4s ease-in-out;
+}
+
+.active > .answer {
+    display: block;
+    padding-bottom: 4.2rem;
+    color: var(--dark-grayish-blue);
 }
 
 .card-body {
@@ -70,7 +78,7 @@ main {
     height: 100%;
 }
 
-.question-answer {
+.questionanswer {
     border-bottom: 1px solid var(--light-grayish-blue);
     width: 310px;
 }
@@ -80,6 +88,15 @@ main {
     justify-content: space-between;
     cursor: pointer;
     transition: 0.2s;
+}
+
+.question-title:hover {
+    color: var(--soft-red);
+}
+
+.questin.active img {
+    transform: rotate(180deg);
+    transition: all 0.3s ease-in-out;
 }
 
 .question img {
@@ -102,3 +119,5 @@ main {
     top: 42%;
     left: -22%;
 }
+
+
