--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ main {
     height: 100%;
 }
 
-.questionanswer {
+.question-answer {
     border-bottom: 1px solid var(--light-grayish-blue);
     width: 310px;
 }
@@ -94,9 +94,8 @@ main {
     color: var(--soft-red);
 }
 
-.questin.active img {
+.active > .question > .arrow {
     transform: rotate(180deg);
-    transition: all 0.3s ease-in-out;
 }
 
 .question img {
@@ -120,4 +119,49 @@ main {
     left: -22%;
 }
 
+@media (max-width: 950px) {
+    main {
+      height: 550px;
+      width: 360px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 120px 1fr;
+      grid-gap: 0.5rem;
+      position: relative;
+      padding: 1rem;
+    }
+
+    .card-image {
+      background: url("images/bg-pattern-mobile.svg");
+      background-repeat: no-repeat;
+      background-position: center 570%;
+    }
+  
+    .body-image {
+      position: absolute;
+      top: -110%;
+      width: 100%;
+      height: 200px;
+      background-size: 72%;
+      background-position: center;
+    }
+
+    .title {
+        text-align: center;
+    }
+
+    .box-image {
+      width: 55px;
+      left: 19%;
+      top: -30%;
+    }
+
+    .card-body {
+      margin-top: 0px;
+    }
+
+    .question-answer {
+      width: 100%;
+    }
+    
+}
 
